# dune-gdt

./: .gitignore
dune/gdt/: CMakeLists.txt
dune/gdt/local/fluxes/: godunov.hh
dune/gdt/operators/: advection.hh  base.hh  fv.hh
dune/gdt/playground/spaces/dg/: dune-pdelab-wrapper.hh
dune/gdt/spaces/fv/: default.hh
dune/gdt/test/: CMakeLists.txt  Hapod.py  boltzmann_HAPOD_timechunk_wise.py  boltzmann_Hapod_timechunk_wise.py  boltzmann_POD.py  boltzmann_RAPOD_only_on_trajectory.py  boltzmann_RAPOD_rank_wise.py  boltzmann_RAPOD_timechunk_wise.py  boltzmann_RAPOD_timechunk_wise_stephans_pod.py  boltzmann_RAPOD_timechunk_wise_with_HAPOD_on_rank_0.py  boltzmann_all_binary_tree_hapod.py  boltzmann_binary_tree_hapod.py  boltzmann_hapod_binary_tree.py  boltzmann_hapod_binary_trees.py  boltzmann_incremental_hapod.py  boltzmann_live_HAPOD_on_trajectory.py  boltzmann_live_hapod.py  boltzmann_mor.py  boltzmann_mor_with_basis_generation.py  boltzmann_mpi.py  boltzmann_mpi_with_even_more_RAPOD.py  boltzmann_mpi_with_more_RAPOD.py  boltzmann_pod.py  boltzmann_rapod_only_on_trajectory.py  boltzmann_segfault.py  boltzmann_standard_pod.py  boltzmann_visualize_solutions.py  boltzmanntest.cc  boltzmannutility.py  chunk_plot.py  gridsize_plot.py  hapod.py  hapodimplementations.py  modred_in_memory.py  modred_test.py  mpiwrapper.py  omega_plot.py  parameters.py  tolerance_plot.py
dune/gdt/test/boltzmann/: wrapper.py
dune/gdt/test/hyperbolic/problems/: 2dboltzmann.hh
dune/gdt/timestepper/: explicit-rungekutta.hh  fractional-step.hh  interface.hh  rungekutta.hh
(+2 files in other folders)
